fixed spacing of boxes under work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ header a {
 #work-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
 }
 
@@ -153,7 +153,7 @@ header a {
 }
 
 .small-item {
-    width: 50%;
+    width: 49.5%;
 }
 
 /* setting opacity of images in work section to allow hover
